include/asm-x86_64/acpi.h
@@ -124,6 +124,12 @@ extern int acpi_ioapic;
 
 #endif /*CONFIG_ACPI_BOOT*/
 
+#ifdef CONFIG_ACPI_PCI
+extern int acpi_irq_balance_set(char *str);
+#else
+static inline int acpi_irq_balance_set(char *str) { return 0; }
+#endif
+
 #ifdef CONFIG_ACPI_SLEEP
 
 /* routines for saving/restoring kernel state */
